# zed-shopify-liquid

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml  lsp-proxy.js
.github/workflows/: release.yml
languages/liquid/: brackets.scm  config.toml  highlights.scm  injections.scm
src/: liquid.rs
