[package]
name = "zed_liquid"
version = "0.4.0"
edition = "2021"
publish = false
license = "MIT"

# [lints]
# workspace = true

[lib]
path = "src/liquid.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

